2010-10-08  Andras Becsi  <abecsi@webkit.org>

        Unreviewed build fix.

        [Qt] Add missing limits.h include since the Qt version currently
        ran on the bot does need that.

        * WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp:

2010-10-08  Balazs Kelemen  <kbalazs@webkit.org>

        Reviewed by Csaba Osztrogonác.

        [Qt] Turn on building WTR
        https://bugs.webkit.org/show_bug.cgi?id=47349

        * Scripts/webkitdirs.pm:

2010-10-08  Balazs Kelemen  <kbalazs@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] TestController needs its platform dependent methods
        https://bugs.webkit.org/show_bug.cgi?id=47413

        * WebKitTestRunner/qt/TestControllerQt.cpp:
        (WTR::TestController::initializeInjectedBundlePath):
        If the WTR_INJECTEDBUNDLE_PATH environmental variable is
        set then use that otherwise use the path where the bundle
        lives in a normal trunk build.
        (WTR::TestController::initializeTestPluginDirectory):
        Set the bundle's value. It is not used currently.
        (WTR::TestController::platformInitializeContext):
        * WebKitTestRunner/qt/WebKitTestRunner.pro:

2010-10-08  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        WTR: Prevent sending the Done message twice on test timeout.
        https://bugs.webkit.org/show_bug.cgi?id=47410

        When InjectedBundle::done() calls stopLoading, this may trigger
        InjectedBundlePage::didFailLoadWithErrorForFrame which calls
        InjectedBundle::done() itself later in the stack.
        This would output the timeout failure message twice and confuse
        the run-webkit-tests script.

        This patch adds a third state, Stopping, which prevents WebCore
        errors to trigger done() when testing is over.

        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::done):